Refactor: rename product handler funcs
